agregando archivos npm

--- a/ejercicios-libres/DOM-a-HTML.html
+++ b/ejercicios-libres/DOM-a-HTML.html
@@ -16,11 +16,14 @@
     <!--Etiquetas en html-->
 
     <div>
+        
         <h2>Cabecera</h3>
             <h3>Mundo</h3>
-            <p>Mundo</p>
-            <hr>
-            <p>Chau!</p>
+            <p>Mundo
+              
+              <hr>
+            </p>
+            <divp>Chau!</div>
     </div>
 
     <!--Etiquetas de html hechas con react y jsx-->
